--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,7 @@ html
 
     link(rel='icon', href='/img/favicon.ico')
     link(rel='stylesheet', href='/css/reset.css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans:400,700')
     link(rel='stylesheet', href='/css/font.css')
     link(rel='stylesheet', href='/css/style.css')
   body
