--- a/views/index.jade
+++ b/views/index.jade
@@ -38,7 +38,7 @@ block content
         p larry-wong.lofter.com
 
         h3 Weibo
-        p YanLinnn
+        p 拾秋馆
 
         h3 Email
         p yanlin.wong@foxmail.com
