Revise the header

--- a/views/index.jade
+++ b/views/index.jade
@@ -62,8 +62,7 @@ block content
             p &gt;&nbsp;&nbsp;&nbsp;SOCIAL&nbsp;&nbsp;&nbsp;&amp;&nbsp;&nbsp;&nbsp;CONTACT
 
         article#home
-            section#background
-                header#header INGREDIA.
+            section#background <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 626 271.37"><defs><style>.a{fill:#fefefe;stroke:#202020;stroke-miterlimit:10;stroke-width:4px;}</style></defs><title>logo</title><path class="a" d="M220,187.44H208.5c-13.81,0-25,10.4-25,23.23V339.32" transform="translate(-182 -152.6)"/><path class="a" d="M235.5,339.32V263.61c0-12.83,11.19-23.23,25-23.23h11c13.81,0,25,10.4,25,23.23v75.71" transform="translate(-182 -152.6)"/><path class="a" d="M334,422.47h27.5c13.81,0,25-10.4,25-23.23V263.61c0-12.83-11.19-23.23-25-23.23h-13c-13.81,0-25,10.4-25,23.23v53c0,12.83,11.19,23.23,25,23.23H373" transform="translate(-182 -152.6)"/><path class="a" d="M466,240.39h-27.5c-13.81,0-25,10.4-25,23.23v75.71" transform="translate(-182 -152.6)"/><path class="a" d="M540.5,339.39H509.4c-13.77-.05-24.9-10.43-24.9-23.22V261.75c0-12.83,11.19-23.23,25-23.23h15c13.81,0,25,10.4,25,23.23v7.43c0,12.83-11.19,23.23-25,23.23H495" transform="translate(-182 -152.6)"/><path class="a" d="M642,152.6v164c0,12.83-11.19,23.23-25,23.23H600c-13.81,0-25-10.4-25-23.23v-53c0-12.83,11.19-23.23,25-23.23h29.5" transform="translate(-182 -152.6)"/><path class="a" d="M696,218.09h-0.5c-13.81,0-25,10.4-25,23.23v98" transform="translate(-182 -152.6)"/><path class="a" d="M808,339.79h-7.5c-13.81,0-25-10.4-25-23.23v-53c0-12.83-11.19-23.23-25-23.23h-14c-13.81,0-25,10.4-25,23.23v53c0,12.83,11.19,23.23,25,23.23H768" transform="translate(-182 -152.6)"/></svg>
 
             section#module
                 ul
@@ -147,4 +146,5 @@ block content
                 a(href="yanlin_wong.pdf", target="_blank") DOWNLOAD RESUME
 
             footer#footer
-                p © Yanlin Wong 2015 | Ingredia
+                p © Yanlin Wong 2015 |
+                    span(style="cursor: pointer;") Ingredia
