--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,12 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+    h1#status-code= statusCode
+    h2#error-state= errorState
+
+    footer#footer
+        p © Yanlin Wong 2015 | Ingredia
+
+    //- h1= message
+    //- h2= error.status
+    //- pre #{error.stack}
