--- a/views/index.jade
+++ b/views/index.jade
@@ -53,10 +53,14 @@ block content
             img(src="img/btn-close.png")
 
     div#page
-        button#button-menu
-            div
-            div
-            div
+        //- button#button-menu
+        //-     div
+        //-     div
+        //-     div
+
+        div.hamburger.hamburger--spin#button-menu
+            div.hamburger-box
+                div.hamburger-inner
 
         section#tab
             p &gt;&nbsp;&nbsp;&nbsp;SOCIAL&nbsp;&nbsp;&nbsp;&amp;&nbsp;&nbsp;&nbsp;CONTACT
@@ -94,7 +98,7 @@ block content
                         img.cover(src="img/letter_2.jpg")
                         div.mask
                         section.state
-                            h3 TYPEFACE ART ACTIVITY
+                            h3 TYPEFACE ART II ACTIVITY
                     section.work.half
                         img.cover(src="img/helo_cover.jpg")
                         div.mask
