--- a/views/index.jade
+++ b/views/index.jade
@@ -135,6 +135,34 @@ block content
                     section#more
                         h3 ...
 
+        article#skill-set
+            section.title
+                h2 SKILLS
+
+            section#skill-set-container
+                button.skill HTML5
+                button.skill CSS
+                button.skill JavaScript
+                button.skill SQL
+                button.skill Visual Basic
+                br
+                button.skill jQuery
+                button.skill Backbone.js
+                button.skill Vue.js
+                button.skill Three.js
+                button.skill Node.js
+                br
+                button.skill Sublime Text
+                button.skill Visual Studio
+                br
+                button.skill Photoshop
+                button.skill Illustrator
+                button.skill Cinema 4D
+                br
+                button.skill Graphic Design
+                button.skill UI Design
+
+
         article#about
             section.title
                 h2 PROFILE
