--- a/views/index.jade
+++ b/views/index.jade
@@ -90,44 +90,44 @@ block content
             section#container
                 section.left
                     section.work.quarter
-                        img.cover(src="img/letter_3.jpg")
+                        //- img.cover(src="img/letter_3.jpg")
                         div.mask
                         section.state
                             h3 TYPEFACE ART ACTIVITY
                     section.work.quarter
-                        img.cover(src="img/letter_2.jpg")
+                        //- img.cover(src="img/letter_2.jpg")
                         div.mask
                         section.state
                             h3 TYPEFACE ART II ACTIVITY
                     section.work.half
-                        img.cover(src="img/helo_cover.jpg")
+                        //- img.cover(src="img/helo_cover.jpg")
                         div.mask
                         section.state
                             h3 HELO
                     section.work.quarter
-                        img.cover(src="img/coach_cover.jpg")
+                        //- img.cover(src="img/coach_cover.jpg")
                         div.mask
                         section.state
                             h3 COMPUTER TECH COACH
                     section.work.quarter
-                        img.cover(src="img/planet_cover.jpg")
+                        //- img.cover(src="img/planet_cover.jpg")
                         div.mask
                         section.state
                             h3 PLANET CLUB AGM
 
                 section.right
                     section.work.half
-                        img.cover(src="img/poet_cover.jpg")
+                        //- img.cover(src="img/poet_cover.jpg")
                         div.mask
                         section.state
                             h3 I AM POET ACTIVITY
                     section.work.quarter
-                        img.cover(src="img/peace_1.jpg")
+                        //- img.cover(src="img/peace_1.jpg")
                         div.mask
                         section.state
                             h3 LOWPOLY SCENE SIDE
                     section.work.quarter
-                        img.cover(src="img/island_1.jpg")
+                        //- img.cover(src="img/island_1.jpg")
                         div.mask
                         section.state
                             h3 LOWPOLY SCENE ISLAND
